Imporve gRPC API
